More Design Fixes
-fixed the design to be vertically extendable
-Repaired most of the content page, for viewing the content of a topic.

Current issue to be fixed:
- the bottom of the page gets cut off by the footer. This can be fixed
in a couple ways, but as of right now is not important, so likely to be
overlooked in favor of completing other aspects of the forum.

--- a/main.css
+++ b/main.css
@@ -1,4 +1,8 @@
-html {overflow-y: scroll;}
+html, body
+{
+    height: 100%;
+    width: 100%;
+}
 body
 {
 	text-align:center;
@@ -50,6 +54,16 @@ h1
 	font-size:12px;
 	margin: 0px auto 0px auto;
 	padding: 10px 10px 10px 10px;
+}
+
+h2
+{
+	display:inline;
+	color:#1f91b2;
+	font-weight:bold;
+	font-size:12px;
+	margin: 0px auto 0px auto;
+	padding: 0px 0px 0px 0px;
 }
 
 p
@@ -105,16 +119,36 @@ button[type="button"]:active{
 
 #main
 {
-	border-style:none;
-	height:100%; 
+	display:block;
+	position:relative;
+	min-height:100%;
 	width:800px;
 	margin: 0px auto 0px auto;
-	text-align:center;
 	padding: 0px 0px 0px 0px;
+	text-align:center;
 	white-space:nowrap;
-	border-spacing:0;
+    border-style:none;
+    border-spacing:0px;
+    border-width:0px;
     border-collapse:collapse;
-    display:block;
+    overflow:visible;
+}
+
+#mainbody
+{
+	display:block;
+	position:relative;
+	background-color:#444;
+	vertical-align: top;
+	text-align:center;
+	margin: 0px auto 0px auto;
+	padding: 0px 0px 0px 0px;
+	width:740px;
+	min-height:100%;
+	height:100%;
+	white-space:normal;
+	overflow: visible;
+	/* background-color:#fff; /* For debugging */
 }
 
 #nav
@@ -132,19 +166,6 @@ button[type="button"]:active{
 {
 	margin: 0px auto 0px auto;
 	padding: 0px 0px 0px 0px;
-}
-
-#mainbody
-{
-	background-color:#444;
-	vertical-align: top;
-	text-align:center;
-	margin: 0px auto 0px auto;
-	padding: 0px 0px 0px 0px;
-	width:740px;
-	height:100%;
-	white-space:normal;
-	float:left;
 }
 
 #title
@@ -223,6 +244,7 @@ button[type="button"]:active{
 
 #header
 {
+	float:left;
 	background-image:url(images/thbg.png);
 	text-align: center;
 	margin: 0px 0px 0px 0px;
@@ -423,6 +445,7 @@ margin: 0px 0px 0px 0px;
 height: 2px;
 border: 0;
 width: 100%;
+float:left;
 }
 
 #thtop
@@ -434,26 +457,30 @@ margin: 0px 0px 0px 0px;
 height: 2px;
 border: 0;
 width: 100%;
+float:left;
 }
 
 #sideleft
 {
-background-image:url(images/tableside.png);
-background-repeat:repeat-y;
-height:100%;
-width:30px;
-float:left;
-top:0px;
+	position:fixed;
+	background-image:url(images/tableside.png);
+	background-repeat:repeat-y;
+	min-height:100%;
+	width:30px;
+	float:left;
+	top:0px;
 }
 
 #sideright
 {
-background-image:url(images/tablesideright.png);
-background-repeat:repeat-y;
-height:100%;
-width:30px;
-float:right;
-top:0px;
+	position:absolute;
+	background-image:url(images/tablesideright.png);
+	background-repeat:repeat-y;
+	min-height:100%;
+	width:30px;
+	float:right;
+	top:0px;
+	right:0px;
 }
 
 #forum
@@ -515,17 +542,42 @@ top:0px;
 	width: 125px;
 }
 
+#pages{
+	float:left;
+	width:700px;
+	margin: 0px auto 0px auto;
+	padding: 0px 0px 0px 0px;
+}
+#pages h1{
+	width:700px;
+	margin: 0px auto 0px auto;
+	padding: 0px 0px 0px 0px;
+}
 #coninfo
 {
+	float:left;
+	position:relative;
+	width:740px;
+	height:35px;
 	background-image:url(images/thbg.png);
 	margin: 0px auto 0px auto;
-	padding: 10px 10px 10px 10px;
+	padding: 0px 0px 0px 0px;
 	background-color: #555;
 	font-size: 10pt;
 	font-weight: bold;
 }
+#coninfo p{
+	position: absolute;
+	display: block;
+	float:right;
+	margin: 0px auto 0px auto;
+	padding: 0px 0px 0px 0px;
+	bottom:0px;
+	right:0px;
+}
 #content
 {
+	float:left;
 	font-size: 9pt; 
 	padding: 20px 20px 20px 20px;
 	margin: 0px 0px 0px 0px;
@@ -555,7 +607,7 @@ top:0px;
 }
 #postarea{
 	margin: 0px auto 0px auto;
-	padding: 30px 20px 20px 20px;
+	padding: 0px 0px 0px 0px;
 	text-align: center;
 }
 
@@ -570,6 +622,7 @@ top:0px;
 	border-top: 15px;
 	border-style: solid;
 	border-color: #444;
+	float:left;
 }
 #intro td{
 	margin: 0px 0px 0px 0px;
